<?xml version="1.0"?>
<package>
  <name>duo3d_ros</name>
  <version>0.9.9</version>
  <description>The DUO3d ROS driver for both just a plain stereo camera driver, as well as a driver for disparity processing using the Dense3D DUO Library.</description>

  <maintainer email="krgebis@gmail.com">Krystian Gebis (L0g1x)</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <url>http://www.ros.org/wiki/duo3d</url>
  <url type="website">http://www.duo3d.com</url>


  <author email="krgebis@gmail.com">Krystian Gebis (L0g1x)</author>


  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
